# ECSE-4320-Advanced-Computer-Systems

Project1 SIMD/: CMakeLists.txt  README.md  build_all.sh  gcc_vectorize_report.simd.txt  scalar_saxpy_f32.asm  scalar_saxpy_f64.asm  simd_saxpy_f32.asm  simd_saxpy_f64.asm
Project1 SIMD/build_scalar/: CMakeCache.txt  Makefile  bench  cmake_install.cmake
Project1 SIMD/data/: aln_vs_mis_per_point.csv  aln_vs_mis_summary.csv  dtype_summary.csv  perf_stride.csv  scalar.csv  simd.csv  stride_abs.csv  stride_avg_by_stride.csv  stride_avg_by_strideN.csv  stride_overview_avg_by_stride.csv  stride_rel.csv  tail_delta_summary.csv  tail_flag_geo.csv
Project1 SIMD/plots/align/: aln_vs_mis_summary.md
Project1 SIMD/plots/dtype/: dtype_summary.md
Project1 SIMD/plots/stride/: stride_summary.md
Project1 SIMD/plots/tail/: tail_delta_summary.md
Project1 SIMD/reports/: Project 1 Report Lucas Ding.md  Project 1 Report Lucas Ding_tmp.html  roofline.md
Project1 SIMD/scripts/: make_align_report.py  make_dtype_report.py  make_roofline_report.py  make_stride_report.py  make_tail_report.py  plot.py  run_all.sh
Project1 SIMD/src/: bench.cpp
Project2 Cache/: README.md  config.env  install_mlc.sh  membw  membw.c  membw_lat  membw_lat.c  pchase  pchase.c  rwmix  rwmix.c  saxpy  saxpy.c  sec2_zeroq.sh  sec3_pattern_stride.sh  sec4_rw_mix.sh  sec5_intensity.sh  sec6_wss.sh  sec7_cache_miss.sh  sec8_tlb.sh  setup_env.sh  tlb_kernel  tlb_kernel.c
Project2 Cache/reports/: Project 2 Report Lucas Ding.md  report.md
Project3 SSD/: bs_sweep_test.bash  env.bash  mix_rw_test.bash  qd1_test.bash  qd_sweep_test.bash  wss_burst_steady.bash
Project3 SSD/reports/: Project 3 Report Lucas Ding.md
Project3 SSD/tables/: bs_sweep_random.csv  bs_sweep_sequential.csv  qd1_baseline.csv  qd_sweep_summary.csv  rw_mix_summary.csv  sect6_summary.csv
(+258 files in other folders)
